--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,38 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/apple-touch-icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+		<!-- Primary Meta Tags -->
+		<title>Albion Black Market Tool</title>
+		<meta name="title" content="Albion Black Market Tool" />
+		<meta name="description" content="Find profitable trading opportunities in Albion Online. Compare city prices with Black Market rates to maximize your profits." />
+		<meta name="keywords" content="Albion Online, Black Market, Trading, Profit Calculator, MMORPG, Market Analysis" />
+		<meta name="author" content="Albion Market Tools" />
+		
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://holmityd.github.io/albion-black-market/" />
+		<meta property="og:title" content="Albion Black Market Tool" />
+		<meta property="og:description" content="Find profitable trading opportunities in Albion Online. Compare city prices with Black Market rates to maximize your profits." />
+		<meta property="og:image" content="%sveltekit.assets%/og-image.png" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:site_name" content="Albion Market Tools" />
+		
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://holmityd.github.io/albion-black-market/" />
+		<meta property="twitter:title" content="Albion Black Market Tool" />
+		<meta property="twitter:description" content="Find profitable trading opportunities in Albion Online. Compare city prices with Black Market rates to maximize your profits." />
+		<meta property="twitter:image" content="%sveltekit.assets%/og-image.png" />
+		
+		<!-- Additional Meta Tags -->
+		<meta name="theme-color" content="#1a1a1a" />
+		<meta name="robots" content="index, follow" />
+		<link rel="canonical" href="https://holmityd.github.io/albion-black-market/" />
+		
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
